--- a/src/QuickEditor/QmlResources.qrc
+++ b/src/QuickEditor/QmlResources.qrc
@@ -2,5 +2,8 @@
     <qresource prefix="/QuickEditor">
         <file>EditorRoot.qml</file>
         <file>SelectionRectangle.qml</file>
+        <file>DrawSurface.qml</file>
+        <file>Shapes/Shapes.Rectangle.js</file>
+        <file>Shapes/Shapes.Line.js</file>
     </qresource>
 </RCC>
