Bring back cropping. Things still broken

--- a/src/QuickEditor/QmlResources.qrc
+++ b/src/QuickEditor/QmlResources.qrc
@@ -4,6 +4,8 @@
         <file>SelectionRectangle.qml</file>
         <file>DrawSurface.qml</file>
         <file>Shapes/Shapes.Rectangle.js</file>
-        <file>Shapes/Shapes.Line.js</file>
+        <file>CropSurface.qml</file>
+        <file>Shapes/ShapeContainer.Rectangle.js</file>
+        <file>Shapes/Shape.CropRectangle.js</file>
     </qresource>
 </RCC>
