--- a/src/QuickEditor/QmlResources.qrc
+++ b/src/QuickEditor/QmlResources.qrc
@@ -1,11 +1,11 @@
 <RCC>
     <qresource prefix="/QuickEditor">
         <file>EditorRoot.qml</file>
-        <file>SelectionRectangle.qml</file>
         <file>DrawSurface.qml</file>
         <file>Shapes/Shapes.Rectangle.js</file>
         <file>CropSurface.qml</file>
         <file>Shapes/ShapeContainer.Rectangle.js</file>
         <file>Shapes/Shape.CropRectangle.js</file>
+        <file>ControlBar.qml</file>
     </qresource>
 </RCC>
