Improve settings logic and layout
Rearrange setting so it's no more possible to have all three options activated at once: copy image to clipboard, save location to clipboard and autosave image.
Added check to avoid having all three settings at once. Updated layout with some spacers.

BUG: 420477

--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -7,25 +7,69 @@
     <x>0</x>
     <y>0</y>
     <width>463</width>
-    <height>446</height>
+    <height>558</height>
    </rect>
   </property>
   <layout class="QFormLayout">
-   <item row="0" column="0" colspan="2">
-    <widget class="KTitleWidget" name="runningTitle">
+   <item row="0" column="0">
+    <widget class="QLabel" name="afterScreenshotLabel">
      <property name="text">
-      <string>When Spectacle is Running</string>
+      <string>After taking a screenshot:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="0" column="1">
+    <widget class="QCheckBox" name="kcfg_copyImageToClipboard">
+     <property name="text">
+      <string>Copy image to clipboard</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QCheckBox" name="kcfg_autoSaveImage">
+     <property name="text">
+      <string>Autosave the image to the default location</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QCheckBox" name="kcfg_copySaveLocation">
+     <property name="text">
+      <string>Copy file location to clipboard after saving</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>18</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="KTitleWidget" name="runningTitle">
+     <property name="text">
+      <string>While Spectacle is running</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
     <widget class="QLabel" name="printKeyActionLabel">
      <property name="text">
       <string>Press screenshot key to:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="5" column="1">
     <widget class="QGroupBox" name="kcfg_printKeyActionRunning">
      <property name="title">
       <string/>
@@ -34,6 +78,9 @@
       <bool>true</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QRadioButton" name="newScreenshotButton">
         <property name="text">
@@ -61,44 +108,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>0</width>
-       <height>18</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="afterScreenshotLabel">
-     <property name="text">
-      <string>After taking a screenshot:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QCheckBox" name="kcfg_copyImageToClipboard">
-     <property name="text">
-      <string>Copy image to clipboard</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QCheckBox" name="kcfg_autoSaveImage">
-     <property name="text">
-      <string>Autosave the image to the default location</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0" colspan="2">
+   <item row="6" column="0" colspan="2">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -114,49 +124,49 @@
      </property>
     </spacer>
    </item>
-   <item row="6" column="0" colspan="2">
+   <item row="7" column="0" colspan="2">
     <widget class="KTitleWidget" name="regionTitle">
      <property name="text">
       <string>Rectangular Region</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="8" column="0">
     <widget class="QLabel" name="generalLabel">
      <property name="text">
       <string>General:</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="1">
+   <item row="8" column="1">
     <widget class="QCheckBox" name="kcfg_useLightMaskColour">
      <property name="text">
       <string>Use light background</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QCheckBox" name="kcfg_showMagnifier">
      <property name="text">
       <string>Show magnifier</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
+   <item row="10" column="1">
     <widget class="QCheckBox" name="kcfg_useReleaseToCapture">
      <property name="text">
       <string>Accept on click-and-release</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="rememberLabel">
      <property name="text">
       <string>Remember selected area:</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="12" column="1">
     <widget class="QRadioButton" name="neverRemeberButton">
      <property name="text">
       <string>Never</string>
@@ -169,7 +179,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="13" column="1">
     <widget class="QRadioButton" name="kcfg_alwaysRememberRegion">
      <property name="text">
       <string>Always</string>
@@ -179,7 +189,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="12" column="1">
+   <item row="14" column="1">
     <widget class="QRadioButton" name="kcfg_rememberLastRectangularRegion">
      <property name="text">
       <string>Until Spectacle is closed</string>
@@ -188,6 +198,22 @@
       <string notr="true">remeberRegionGroup</string>
      </attribute>
     </widget>
+   </item>
+   <item row="11" column="1">
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>18</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
@@ -198,6 +224,20 @@
    <header>ktitlewidget.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>kcfg_copyImageToClipboard</tabstop>
+  <tabstop>kcfg_autoSaveImage</tabstop>
+  <tabstop>kcfg_copySaveLocation</tabstop>
+  <tabstop>newScreenshotButton</tabstop>
+  <tabstop>newWindowButton</tabstop>
+  <tabstop>activateWindowButton</tabstop>
+  <tabstop>kcfg_useLightMaskColour</tabstop>
+  <tabstop>kcfg_showMagnifier</tabstop>
+  <tabstop>kcfg_useReleaseToCapture</tabstop>
+  <tabstop>neverRemeberButton</tabstop>
+  <tabstop>kcfg_alwaysRememberRegion</tabstop>
+  <tabstop>kcfg_rememberLastRectangularRegion</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
  <buttongroups>
