Don't translate property name
kcfg_property is a magic property used by KConfigDialog to control what property is manipulated.
In this case we want to manipulate the currentText property of the QComboBox.

Strings in UI files are getting translated by default. This results in kcfg_property containing a nonexistant property for non-english locale which breaks setting the right value of the combobox.

BUG: 431557

--- a/src/Gui/SettingsDialog/SaveOptions.ui
+++ b/src/Gui/SettingsDialog/SaveOptions.ui
@@ -101,7 +101,8 @@
      <item>
       <widget class="QComboBox" name="kcfg_defaultSaveImageFormat">
        <property name="kcfg_property" stdset="0">
-        <string>currentText</string>
+        <!-- This is not a user-visible string but a property name. Don't translate it. -->
+        <string notr="true">currentText</string>
        </property>
       </widget>
      </item>
