fix: improve the explanatory text for doNothing Radio button, after-screenshot clipboard action

--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -217,7 +217,7 @@
       <item>
        <widget class="QRadioButton" name="doNothingButton">
         <property name="text">
-         <string>Do nothing</string>
+         <string>Do not copy anything</string>
         </property>
         <property name="checked">
          <bool>true</bool>
