Settings UI, save tab: Shorten text explaining Image quality compression

--- a/src/Gui/SettingsDialog/SaveOptions.ui
+++ b/src/Gui/SettingsDialog/SaveOptions.ui
@@ -168,9 +168,9 @@
     </spacer>
    </item>
    <item row="4" column="1">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="compressionQualityHelpLable">
      <property name="text">
-      <string>Choose the image quality when saving with lossy image formats like JPEG</string>
+      <string>For lossy image formats like JPEG</string>
      </property>
     </widget>
    </item>
