Rewrite Settings > General Radiobuttons into QComboBox

--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -37,21 +37,7 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="afterScreenshotLabel">
-     <property name="text">
-      <string>After taking a screenshot:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QCheckBox" name="kcfg_autoSaveImage">
-     <property name="text">
-      <string>Autosave file to default folder</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="2">
+   <item row="1" column="0" colspan="2">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -67,60 +53,92 @@
      </property>
     </spacer>
    </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="afterScreenshotLabel">
+     <property name="text">
+      <string>After taking a screenshot:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QCheckBox" name="kcfg_autoSaveImage">
+     <property name="text">
+      <string>Autosave file to default folder</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QComboBox" name="kcfg_clipboardGroup">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <property name="text">
+        <string>Do not copy anything</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Copy image to clipboard</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Copy file location to clipboard</string>
+       </property>
+      </item>
+    </widget>
+   </item>
    <item row="4" column="0" colspan="2">
+    <spacer name="verticalSpacer_1">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>18</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="5" column="0" colspan="2">
     <widget class="KTitleWidget" name="runningTitle">
      <property name="text">
       <string>While Spectacle is running</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="printKeyActionLabel">
      <property name="text">
       <string>Press screenshot key to:</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QGroupBox" name="kcfg_printKeyActionRunning">
-     <property name="title">
-      <string/>
-     </property>
-     <property name="flat">
-      <bool>true</bool>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout1">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
+   <item row="6" column="1">
+    <widget class="QComboBox" name="kcfg_printKeyActionRunning">
       <item>
-       <widget class="QRadioButton" name="newScreenshotButton">
-        <property name="text">
-         <string>Take a new Screenshot</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
+       <property name="text">
+        <string>Take a new Screenshot</string>
+       </property>
       </item>
       <item>
-       <widget class="QRadioButton" name="newWindowButton">
-        <property name="text">
-         <string>Open a new Spectacle window</string>
-        </property>
-       </widget>
+       <property name="text">
+        <string>Open a new Spectacle window</string>
+       </property>
       </item>
       <item>
-       <widget class="QRadioButton" name="activateWindowButton">
-        <property name="text">
-         <string>Return focus to Spectacle</string>
-        </property>
-       </widget>
+       <property name="text">
+        <string>Return focus to Spectacle</string>
+       </property>
       </item>
-     </layout>
     </widget>
    </item>
-   <item row="6" column="0" colspan="2">
+   <item row="7" column="0" colspan="2">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -136,42 +154,42 @@
      </property>
     </spacer>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="8" column="0" colspan="2">
     <widget class="KTitleWidget" name="regionTitle">
      <property name="text">
       <string>Rectangular Region</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QLabel" name="generalLabel">
      <property name="text">
       <string>General:</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QCheckBox" name="kcfg_useLightMaskColour">
      <property name="text">
       <string>Use light background</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
+   <item row="10" column="1">
     <widget class="QCheckBox" name="kcfg_showMagnifier">
      <property name="text">
       <string>Show magnifier</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="11" column="1">
     <widget class="QCheckBox" name="kcfg_useReleaseToCapture">
      <property name="text">
       <string>Accept on click-and-release</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="12" column="1">
     <spacer name="verticalSpacer_3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -187,83 +205,30 @@
      </property>
     </spacer>
    </item>
-   <item row="12" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="rememberLabel">
      <property name="text">
       <string>Remember selected area:</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="1">
-    <widget class="QRadioButton" name="">
-     <property name="text">
-      <string>Never</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-     <attribute name="buttonGroup">
-      <string notr="true">remeberRegionGroup</string>
-     </attribute>
-    </widget>
-   </item>
    <item row="13" column="1">
-    <widget class="QRadioButton" name="kcfg_alwaysRememberRegion">
-     <property name="text">
-      <string>Always</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string notr="true">remeberRegionGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="14" column="1">
-    <widget class="QRadioButton" name="kcfg_rememberLastRectangularRegion">
-     <property name="text">
-      <string>Until Spectacle is closed</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string notr="true">remeberRegionGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QGroupBox" name="kcfg_clipboardGroup">
-     <property name="title">
-      <string/>
-     </property>
-     <property name="flat">
-      <bool>true</bool>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout2">
-      <property name="leftMargin">
-       <number>0</number>
+    <widget class="QComboBox" name="kcfg_rememberLastRectangularRegion">
+     <item>
+      <property name="text">
+       <string>Never</string>
       </property>
-      <item>
-       <widget class="QRadioButton" name="doNothingButton">
-        <property name="text">
-         <string>Do not copy anything</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="copyImageButton">
-        <property name="text">
-         <string>Copy image to clipboard</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="copyFileLocationButton">
-        <property name="text">
-         <string>Copy file location to clipboard</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     </item>
+     <item>
+      <property name="text">
+       <string>Always</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Until Spectacle is closed</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
@@ -285,12 +250,8 @@
   <tabstop>kcfg_useLightMaskColour</tabstop>
   <tabstop>kcfg_showMagnifier</tabstop>
   <tabstop>kcfg_useReleaseToCapture</tabstop>
-  <tabstop>kcfg_alwaysRememberRegion</tabstop>
   <tabstop>kcfg_rememberLastRectangularRegion</tabstop>
  </tabstops>
  <resources/>
  <connections/>
- <buttongroups>
-  <buttongroup name="remeberRegionGroup"/>
- </buttongroups>
 </ui>
